--- a/.github/actions/keras_application_test/action.yml
+++ b/.github/actions/keras_application_test/action.yml
@@ -55,9 +55,11 @@ runs:
               pip install numpy==1.19.0
           else 
               pip install transformers
-              if [[ "${{ inputs.tf_version }}" != "2.13" && "${{ inputs.tf_version }}" != "2.9" ]]; then 
+              if [[ "${{ inputs.tf_version }}" != "2.13" && "${{ inputs.tf_version }}" != "2.9" ]]; then
+                echo "-- install-1 TF-KERAS ${{ inputs.tf_version }}"
                 pip install tf_keras==${{ inputs.tf_version }} tensorflow==${{ inputs.tf_version }}
               else
+                echo "-- install-1 TF ${{ inputs.tf_version }}"
                 pip install "protobuf<3.20" tensorflow==${{ inputs.tf_version }}
               fi
           fi
