--- a/.github/workflows/keras_unit_test_ci.yml
+++ b/.github/workflows/keras_unit_test_ci.yml
@@ -86,30 +86,6 @@ jobs:
           name: Test Results (Py311-TF2.18-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test2_py312_tf2_18: # Do not change this name because it is used in Ruleset of this repo.
-    strategy:
-      fail-fast: false
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run Tests (Py312-TF2.18)
-        uses: ./.github/actions/keras_unit_test
-        with:
-          tf_version: '2.18.0'
-          python_version: '3.12'
-          ort_version: '1.20.1'
-          onnx_version: '1.17.0'
-
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: Test Results (Py312-TF2.18-ubuntu)
-          path: ./**/test-results-*.xml
-
   Test2_py37_with_tf1_15: # Do not change this name because it is used in Ruleset of this repo.
     strategy:
       fail-fast: false
@@ -143,7 +119,6 @@ jobs:
           - 'py39-tf2.15'
           - 'py310-tf2.18'
           - 'py311-tf2.18'
-          - 'py312-tf2.18'
         os: ['ubuntu-latest', 'windows-2022']
         include:
           - name: 'py38-tf2.13'
@@ -164,11 +139,6 @@ jobs:
           - name: 'py311-tf2.18'
             tf_version: '2.18.0'
             python_version: '3.11'
-            ort_version: '1.20.1'
-            onnx_version: '1.17.0'
-          - name: 'py312-tf2.18'
-            tf_version: '2.18.0'
-            python_version: '3.12'
             ort_version: '1.20.1'
             onnx_version: '1.17.0'
     runs-on: ${{ matrix.os }}
@@ -193,7 +163,7 @@ jobs:
 
   publish-test-results:
     name: "Publish Tests Results to Github"
-    needs: [Test2_py38_tf2_9, Test2_py310_tf2_18, Test2_py311_tf2_18, Test2_py312_tf2_18, Test2_py37_with_tf1_15, Extra_tests2]
+    needs: [Test2_py38_tf2_9, Test2_py310_tf2_18, Test2_py311_tf2_18, Test2_py37_with_tf1_15, Extra_tests2]
     runs-on: ubuntu-latest
     permissions:
       checks: write
