--- a/.github/actions/keras_unit_test/action.yml
+++ b/.github/actions/keras_unit_test/action.yml
@@ -24,22 +24,22 @@ runs:
           python -m pip install --upgrade pip
           pip install onnxconverter-common
           pip install onnx==${{ inputs.onnx_version }}
-          pip install h5py
           pip install parameterized
           pip install timeout-decorator
           pip install coloredlogs flatbuffers
           pip install pytest pytest-cov pytest-runner
           pip install onnxruntime==${{ inputs.ort_version }}
-          pip uninstall -y protobuf
+          pip uninstall -y protobuf h5py tensorflow
           if [[ ${{ inputs.tf_version }} == 1.* ]]; then 
-              pip install numpy==1.19.0 tensorflow==${{ inputs.tf_version }}
+              echo "-- install-2 TF1-KERAS ${{ inputs.tf_version }}"
+              pip install numpy==1.19.0 tensorflow==${{ inputs.tf_version }} protobuf keras h5py
           else 
               if [[ "${{ inputs.tf_version }}" != "2.13.0" && "${{ inputs.tf_version }}" != "2.9.0" ]]; then 
                 echo "-- install-2 TF-KERAS ${{ inputs.tf_version }}"
-                pip install tf_keras==${{ inputs.tf_version }} tensorflow==${{ inputs.tf_version }}
+                pip install tf_keras==${{ inputs.tf_version }} tensorflow==${{ inputs.tf_version }} h5py
               else
                 echo "-- install-2 TF ${{ inputs.tf_version }}"
-                pip install protobuf tensorflow==${{ inputs.tf_version }}
+                pip install protobuf tensorflow==${{ inputs.tf_version }} h5py
               fi
           fi
 
