--- a/.github/actions/keras_application_test/action.yml
+++ b/.github/actions/keras_application_test/action.yml
@@ -55,7 +55,7 @@ runs:
               pip install transformers
               if [[ "${{ inputs.tf_version }}" != "2.13.0" && "${{ inputs.tf_version }}" != "2.9.0" ]]; then
                 echo "-- install-1 TF-KERAS ${{ inputs.tf_version }}"
-                pip install tf_keras==${{ inputs.tf_version }} tensorflow==${{ inputs.tf_version }}
+                pip install tf_keras==${{ inputs.tf_version }} tensorflow==${{ inputs.tf_version }} protobuf
               else
                 echo "-- install-1 TF ${{ inputs.tf_version }}"
                 pip install protobuf tensorflow==${{ inputs.tf_version }}
