--- a/.github/workflows/pretrained_model_test_ci.yml
+++ b/.github/workflows/pretrained_model_test_ci.yml
@@ -102,12 +102,20 @@ jobs:
         name:
           - 'py38-tf2.13'
           - 'py39-tf2.15'
+          - 'py311-tf2.18'
+          - 'py312-tf2.18
         os: ['ubuntu-latest', 'windows-2022']
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
         onnx_version: ['1.16.1']
         skip_tflite: ['False']
         include:
+          - name: 'py311-tf2.18'
+            tf_version: '2.18.0'
+            python_version: '3.11'
+          - name: 'py312-tf2.18'
+            tf_version: '2.18.0'
+            python_version: '3.12'
           - name: 'py38-tf2.13'
             tf_version: '2.13.0'
             python_version: '3.8'
