simplify two tests'
Signed-off-by: xadupre <xadupre@microsoft.com>

--- a/.github/workflows/keras_application_test_ci.yml
+++ b/.github/workflows/keras_application_test_ci.yml
@@ -15,30 +15,6 @@ concurrency:
 
 jobs:
 
-  Test1_py38_tf2_9: # Do not change this name because it is used in Ruleset of this repo.
-    strategy:
-      fail-fast: false
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run Tests (Py39-TF2.9)
-        uses: ./.github/actions/keras_application_test
-        with:
-          tf_version: '2.9.0'
-          python_version: '3.9'
-          ort_version: '1.16.3'
-          onnx_version: '1.16.1'
-
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: Test Results (Py39-TF2.9-ubuntu)
-          path: ./**/test-results-*.xml
-
   Test1_py310_tf2_19: # Do not change this name because it is used in Ruleset of this repo.
     strategy:
       fail-fast: false
@@ -61,30 +37,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Test Results (Py310-TF2.19-ubuntu)
-          path: ./**/test-results-*.xml
-
-  Test1_py37_with_tf1_15: # Do not change this name because it is used in Ruleset of this repo.
-    strategy:
-      fail-fast: false
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run Tests (Py37-TF1.15)
-        uses: ./.github/actions/keras_application_test
-        with:
-          tf_version: '1.15.5'
-          python_version: '3.7'
-          ort_version: '1.14.1'
-          onnx_version: '1.14.1'
-
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: Test Results (Py37-TF1.15-ubuntu)
           path: ./**/test-results-*.xml
 
   Extra_tests1:
@@ -140,7 +92,7 @@ jobs:
 
   publish-test-results:
     name: "Publish Tests Results to Github"
-    needs: [Test1_py38_tf2_9, Test1_py310_tf2_19, Test1_py37_with_tf1_15, Extra_tests1]
+    needs: [Test1_py310_tf2_19, Extra_tests1]
     runs-on: ubuntu-latest
     permissions:
       checks: write
