--- a/.github/workflows/keras_application_test_ci.yml
+++ b/.github/workflows/keras_application_test_ci.yml
@@ -48,18 +48,21 @@ jobs:
           - 'py39-tf2.15'
           - 'py310-tf2.19'
           - 'py311-tf2.19'
-        os: ['ubuntu-latest', 'windows-2022']
+          - 'py312-tf2.19'
+        os: ['ubuntu-latest', 'windows-latest']
         include:
           - name: 'py38-tf2.13'
             tf_version: '2.13.0'
             python_version: '3.8'
             ort_version: '1.16.3'
             onnx_version: '1.16.1'
+            os_version: 'ubuntu-latest'
           - name: 'py39-tf2.15'
             tf_version: '2.15.0'
             python_version: '3.9'
             ort_version: '1.16.3'
             onnx_version: '1.16.1'
+            os_version: 'ubuntu-latest'
           - name: 'py310-tf2.19'
             tf_version: '2.19.0'
             python_version: '3.10'
@@ -70,6 +73,11 @@ jobs:
             python_version: '3.11'
             ort_version: '1.20.1'
             onnx_version: '1.17.0'
+          - name: 'py312-tf2.19'
+            tf_version: '2.19.0'
+            python_version: '3.12'
+            ort_version: '1.22.0'
+            onnx_version: '1.18.0'
     runs-on: ${{ matrix.os }}
 
     steps:
