--- a/.github/workflows/pretrained_model_test_ci.yml
+++ b/.github/workflows/pretrained_model_test_ci.yml
@@ -69,32 +69,6 @@ jobs:
           name: Test Results (Py310-TF2.19-18-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test3_py37_with_tf1_15: # Do not change this name because it is used in 'publish-test-results' section below.
-    strategy:
-      fail-fast: false
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run Tests (Py310-TF2.15-18)
-        uses: ./.github/actions/pretrained_model_test
-        with:
-          tf_version: '1.15.5'
-          python_version: '3.7'
-          os: 'ubuntu-22.04'  # Max ubuntu version supports python 3.7.
-          opset_version: '15'
-          ort_version: '1.14.1'
-          onnx_version: '1.14.1'
-
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: Test Results (Py37-TF1.15-15-ubuntu)
-          path: ./**/test-results-*.xml
-
   Extra_tests3:  # Do not change this name because it is used in 'publish-test-results' section below.
     strategy:
       fail-fast: false
@@ -153,7 +127,7 @@ jobs:
 
   publish-test-results:
     name: "Publish Tests Results to Github"
-    needs: [Test3_py38_tf2_9, Test3_py310_tf2_19, Test3_py37_with_tf1_15, Extra_tests3]
+    needs: [Test3_py38_tf2_9, Test3_py310_tf2_19, Extra_tests3]
     runs-on: ubuntu-latest
     permissions:
       checks: write
