--- a/.github/workflows/unit_test_ci.yml
+++ b/.github/workflows/unit_test_ci.yml
@@ -15,33 +15,6 @@ concurrency:
 
 jobs:
 
-  Test4_py38_tf2_9: # Do not change this name because it is used in Ruleset of this repo.
-    strategy:
-      fail-fast: false
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run Tests (Py39-TF2.9-18)
-        uses: ./.github/actions/unit_test
-        with:
-          os: 'ubuntu-latest'
-          tf_version: '2.9.0'
-          python_version: '3.9'
-          ort_version: '1.16.3'
-          onnx_version: '1.16.1'
-          opset_version: '18'
-          skip_tflite: 'False'
-
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: Test Results (Py39-TF2.9-18-ubuntu)
-          path: ./**/test-results-*.xml
-
   Test4_py310_tf2_19: # Do not change this name because it is used in Ruleset of this repo.
     strategy:
       fail-fast: false
@@ -101,24 +74,12 @@ jobs:
       fail-fast: false
       matrix:
         name:
-          - 'py39-tf2.15'
-          - 'py310-tf2.19'
-          - 'py311-tf2.19'
+          - 'py312-tf2.19'
         os: ['ubuntu-latest', 'windows-2022']
-        opset_version: ['18', '15']
+        opset_version: ['18']
         skip_tflite: ['False']
         include:
-          - name: 'py39-tf2.15'
-            tf_version: '2.15.0'
-            python_version: '3.9'
-            ort_version: '1.16.3'
-            onnx_version: '1.16.1'
-          - name: 'py310-tf2.19'
-            tf_version: '2.19.0'
-            python_version: '3.10'
-            ort_version: '1.20.1'
-            onnx_version: '1.17.0'
-          - name: 'py311-tf2.19'
+          - name: 'py312-tf2.19'
             tf_version: '2.19.0'
             python_version: '3.11'
             ort_version: '1.20.1'
@@ -149,7 +110,7 @@ jobs:
 
   publish-test-results:
     name: "Publish Tests Results to Github"
-    needs: [Test4_py38_tf2_9, Test4_py310_tf2_19, Test4_py311_tf2_19, Extra_tests4]
+    needs: [Test4_py310_tf2_19, Test4_py311_tf2_19, Extra_tests4]
     runs-on: ubuntu-latest
     permissions:
       checks: write
