--- a/.github/actions/keras_unit_test/action.yml
+++ b/.github/actions/keras_unit_test/action.yml
@@ -45,7 +45,7 @@ runs:
 
           pip install -e .
 
-          echo "----- List all of depdencies:"
+          echo "----- List all of dependencies: (tensorflow==${{ inputs.tf_version }})"
           pip freeze --all
 
     - name: Run keras_unit_test (Linux)
