--- a/.github/workflows/keras_application_test_ci.yml
+++ b/.github/workflows/keras_application_test_ci.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run Tests (Py39-TF2.9)
+      - name: Run Tests (Py310-TF2.9)
         uses: ./.github/actions/keras_application_test
         with:
           tf_version: '2.9.0'
-          python_version: '3.9'
+          python_version: '3.10'
           ort_version: '1.16.3'
           onnx_version: '1.16.1'
 
@@ -36,7 +36,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: Test Results (Py39-TF2.9-ubuntu)
+          name: Test Results (Py310-TF2.9-ubuntu)
           path: ./**/test-results-*.xml
 
   Test_max_py_with_latest_tf: # Do not change this name because it is used in Ruleset of this repo.
@@ -63,47 +63,23 @@ jobs:
           name: Test Results (Py310-TF2.15-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test_py37_with_tf1_15: # Do not change this name because it is used in Ruleset of this repo.
-    strategy:
-      fail-fast: false
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run Tests (Py37-TF1.15)
-        uses: ./.github/actions/keras_application_test
-        with:
-          tf_version: '1.15.5'
-          python_version: '3.7'
-          ort_version: '1.14.1'
-          onnx_version: '1.14.1'
-
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: Test Results (Py37-TF1.15-ubuntu)
-          path: ./**/test-results-*.xml
-
   Extra_tests:
     strategy:
       fail-fast: false
       matrix:
         name:
-          - 'py38-tf2.13'
-          - 'py39-tf2.15'
+          - 'py310-tf2.13'
+          - 'py310-tf2.15'
         os: ['ubuntu-latest', 'windows-2022']
         ort_version: ['1.16.3']
         onnx_version: ['1.16.1']
         include:
-          - name: 'py38-tf2.13'
+          - name: 'py310-tf2.13'
             tf_version: '2.13.0'
-            python_version: '3.8'
-          - name: 'py39-tf2.15'
+            python_version: '3.10'
+          - name: 'py310-tf2.15'
             tf_version: '2.15.0'
-            python_version: '3.9'
+            python_version: '3.10'
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -126,7 +102,7 @@ jobs:
 
   publish-test-results:
     name: "Publish Tests Results to Github"
-    needs: [Test_min_py_with_min_tf, Test_max_py_with_latest_tf, Test_py37_with_tf1_15, Extra_tests]
+    needs: [Test_min_py_with_min_tf, Test_max_py_with_latest_tf, Extra_tests]
     runs-on: ubuntu-latest
     permissions:
       checks: write
