--- a/.github/workflows/pretrained_model_test_ci.yml
+++ b/.github/workflows/pretrained_model_test_ci.yml
@@ -24,12 +24,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run Tests (Py39-TF2.9-18)
+      - name: Run Tests (Py310-TF2.9-18)
         uses: ./.github/actions/pretrained_model_test
         with:
           os: 'ubuntu-latest'
           tf_version: '2.9.0'
-          python_version: '3.9'
+          python_version: '3.10'
           ort_version: '1.16.3'
           onnx_version: '1.16.1'
           opset_version: '18'
@@ -39,7 +39,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: Test Results (Py39-TF2.9-18-ubuntu)
+          name: Test Results (Py310-TF2.9-18-ubuntu)
           path: ./**/test-results-*.xml
 
   Test_max_py_with_latest_tf: # Do not change this name because it is used in 'publish-test-results' section below.
@@ -69,51 +69,25 @@ jobs:
           name: Test Results (Py310-TF2.15-18-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test_py37_with_tf1_15: # Do not change this name because it is used in 'publish-test-results' section below.
-    strategy:
-      fail-fast: false
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run Tests (Py310-TF2.15-18)
-        uses: ./.github/actions/pretrained_model_test
-        with:
-          tf_version: '1.15.5'
-          python_version: '3.7'
-          os: 'ubuntu-22.04'  # Max ubuntu version supports python 3.7.
-          opset_version: '15'
-          ort_version: '1.14.1'
-          onnx_version: '1.14.1'
-
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: Test Results (Py37-TF1.15-15-ubuntu)
-          path: ./**/test-results-*.xml
-
   Extra_tests:  # Do not change this name because it is used in 'publish-test-results' section below.
     strategy:
       fail-fast: false
       matrix:
         name:
-          - 'py38-tf2.13'
-          - 'py39-tf2.15'
+          - 'py310-tf2.13'
+          - 'py310-tf2.15'
         os: ['ubuntu-latest', 'windows-2022']
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
         onnx_version: ['1.16.1']
         skip_tflite: ['False']
         include:
-          - name: 'py38-tf2.13'
+          - name: 'py310-tf2.13'
             tf_version: '2.13.0'
-            python_version: '3.8'
-          - name: 'py39-tf2.15'
+            python_version: '3.10'
+          - name: 'py310-tf2.15'
             tf_version: '2.15.0'
-            python_version: '3.9'
+            python_version: '3.10'
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -139,7 +113,7 @@ jobs:
 
   publish-test-results:
     name: "Publish Tests Results to Github"
-    needs: [Test_min_py_with_min_tf, Test_max_py_with_latest_tf, Test_py37_with_tf1_15, Extra_tests]
+    needs: [Test_min_py_with_min_tf, Test_max_py_with_latest_tf, Extra_tests]
     runs-on: ubuntu-latest
     permissions:
       checks: write
