--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=77.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -20,7 +20,7 @@ dependencies = [
     "requests",
     "six",
     "flatbuffers>=1.12",
-    "protobuf~=3.20",
+    "protobuf",
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
