--- a/.github/actions/keras_application_test/action.yml
+++ b/.github/actions/keras_application_test/action.yml
@@ -37,7 +37,7 @@ runs:
           git clone https://github.com/matterport/Mask_RCNN
           cd Mask_RCNN
           pip install -r requirements.txt
-          pip install .
+          pip install --no-build-isolation .
           cd ..
           pip install matplotlib
           git clone https://github.com/qqwweee/keras-yolo3
