--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,8 @@ dependencies = [
     "numpy>=1.14.1",
     "onnx>=1.4.1",
     "requests",
-    "six",
     "flatbuffers>=1.12",
-    "protobuf",
+    "protobuf>=3.20",
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
