--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,11 +2,6 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-
 version: 2
 updates:
   - package-ecosystem: "pip" # See documentation for possible values
@@ -29,6 +24,4 @@ updates:
       interval: "monthly"
     cooldown:
       default-days: 7
-    open-pull-requests-limit: 20
-    labels:
-      - "github_actions"
+    open-pull-requests-l
