--- a/.github/actions/keras_application_test/action.yml
+++ b/.github/actions/keras_application_test/action.yml
@@ -24,8 +24,7 @@ runs:
           python -m pip install --upgrade pip
           pip install onnxconverter-common
           pip install onnx==${{ inputs.onnx_version }}
-          pip uninstall -y protobuf
-          pip install "protobuf~=3.20"
+          pip install protobuf
           pip install h5py==3.7.0
           pip install parameterized
           pip install timeout-decorator
