--- a/.github/workflows/pretrained_model_test_ci.yml
+++ b/.github/workflows/pretrained_model_test_ci.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
-      - name: Run Tests (Py39-TF2.9-18)
+      - name: Run Tests (Py39-TF2.12-18)
         uses: ./.github/actions/pretrained_model_test
         with:
           os: 'ubuntu-latest'
-          tf_version: '2.9.0'
+          tf_version: '2.12.0'
           python_version: '3.9'
           ort_version: '1.16.3'
           onnx_version: '1.16.1'
@@ -39,7 +39,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v6
         with:
-          name: Test Results (Py39-TF2.9-18-ubuntu)
+          name: Test Results (Py39-TF2.12-18-ubuntu)
           path: ./**/test-results-*.xml
 
   Test_max_py_with_latest_tf: # Do not change this name because it is used in 'publish-test-results' section below.
@@ -51,12 +51,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
-      - name: Run Tests (Py310-TF2.15-18)
+      - name: Run Tests (Py312-TF2.20-18)
         uses: ./.github/actions/pretrained_model_test
         with:
           os: 'ubuntu-latest'
-          tf_version: '2.15.0'
-          python_version: '3.10'
+          tf_version: '2.20.0'
+          python_version: '3.12'
           ort_version: '1.16.3'
           onnx_version: '1.16.1'
           opset_version: '18'
@@ -66,33 +66,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v6
         with:
-          name: Test Results (Py310-TF2.15-18-ubuntu)
-          path: ./**/test-results-*.xml
-
-  Test_py37_with_tf1_15: # Do not change this name because it is used in 'publish-test-results' section below.
-    strategy:
-      fail-fast: false
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-
-      - name: Run Tests (Py310-TF2.15-18)
-        uses: ./.github/actions/pretrained_model_test
-        with:
-          tf_version: '1.15.5'
-          python_version: '3.7'
-          os: 'ubuntu-22.04'  # Max ubuntu version supports python 3.7.
-          opset_version: '15'
-          ort_version: '1.14.1'
-          onnx_version: '1.14.1'
-
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v6
-        with:
-          name: Test Results (Py37-TF1.15-15-ubuntu)
+          name: Test Results (Py312-TF2.20-18-ubuntu)
           path: ./**/test-results-*.xml
 
   Extra_tests:  # Do not change this name because it is used in 'publish-test-results' section below.
@@ -139,7 +113,7 @@ jobs:
 
   publish-test-results:
     name: "Publish Tests Results to Github"
-    needs: [Test_min_py_with_min_tf, Test_max_py_with_latest_tf, Test_py37_with_tf1_15, Extra_tests]
+    needs: [Test_min_py_with_min_tf, Test_max_py_with_latest_tf, Extra_tests]
     runs-on: ubuntu-latest
     permissions:
       checks: write
