--- a/.github/workflows/keras_application_test_ci.yml
+++ b/.github/workflows/keras_application_test_ci.yml
@@ -16,89 +16,61 @@ concurrency:
 jobs:
 
   Test_min_py_with_min_tf: # Do not change this name because it is used in Ruleset of this repo.
-    strategy:
-      fail-fast: false
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-
-      - name: Run Tests (Py310-TF2.13)
-        uses: ./.github/actions/keras_application_test
+      - uses: actions/checkout@v6
+      - uses: ./.github/actions/keras_application_test
         with:
           tf_version: '2.13.0'
           python_version: '3.10'
           ort_version: '1.16.3'
           onnx_version: '1.16.1'
-
       - name: Upload Test Results
         if: always()
         uses: actions/upload-artifact@v6
         with:
-          name: Test Results (Py310-TF2.13-ubuntu)
-          path: ./**/test-results-*.xml
+          name: Test Results (min-tf-ubuntu)
+          path: junit/test-results.xml
 
   Test_max_py_with_latest_tf: # Do not change this name because it is used in Ruleset of this repo.
-    strategy:
-      fail-fast: false
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-
-      - name: Run Tests (Py310-TF2.15)
-        uses: ./.github/actions/keras_application_test
+      - uses: actions/checkout@v6
+      - uses: ./.github/actions/keras_application_test
         with:
           tf_version: '2.15.0'
           python_version: '3.10'
           ort_version: '1.16.3'
           onnx_version: '1.16.1'
-
       - name: Upload Test Results
         if: always()
         uses: actions/upload-artifact@v6
         with:
-          name: Test Results (Py310-TF2.15-ubuntu)
-          path: ./**/test-results-*.xml
+          name: Test Results (max-tf-ubuntu)
+          path: junit/test-results.xml
 
   Extra_tests:
     strategy:
       fail-fast: false
       matrix:
-        name:
-          - 'py310-tf2.13'
-          - 'py310-tf2.15'
-        os: ['ubuntu-latest', 'windows-2022']
-        ort_version: ['1.16.3']
-        onnx_version: ['1.16.1']
-        include:
-          - name: 'py310-tf2.13'
-            tf_version: '2.13.0'
-            python_version: '3.10'
-          - name: 'py310-tf2.15'
-            tf_version: '2.15.0'
-            python_version: '3.10'
-    runs-on: ${{ matrix.os }}
-
+        tf_version: ['2.13.0', '2.15.0']
+    runs-on: windows-2022
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-
-      - name: Run Tests (Py${{ matrix.python_version }}_TF${{ matrix.tf_version }}_${{ matrix.os }}_${{ matrix.ort_version }})
-        uses: ./.github/actions/keras_application_test
+      - uses: actions/checkout@v6
+        with:
+          persist-credentials: false
+      - uses: ./.github/actions/keras_application_test
         with:
           tf_version: ${{ matrix.tf_version }}
-          python_version: ${{ matrix.python_version }}
-          ort_version: ${{ matrix.ort_version }}
-          onnx_version: ${{ matrix.onnx_version }}
+          python_version: '3.10'
+          ort_version: '1.16.3'
+          onnx_version: '1.16.1'
       - name: Upload Test Results
         if: always()
         uses: actions/upload-artifact@v6
         with:
-          name: Test Results (${{ matrix.python_version }}-${{ matrix.tf_version }}-${{ matrix.os }})
-          path: ./**/test-results*.xml
+          name: Test Results (windows-${{ matrix.tf_version }})
+          path: junit/test-results.xml
 
   publish-test-results:
     name: "Publish Tests Results to Github"
@@ -113,7 +85,6 @@ jobs:
         uses: actions/download-artifact@v7
         with:
           path: artifacts
-
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
