--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,5 +81,5 @@ ignore = [
 "tests/common.py" = ["F401"]
 # Bare except is intentional (tf.contrib may not exist in TF 2.x)
 "tests/run_pretrained_models.py" = ["E722"]
-# Wildcard import from common is intentional; all exported names are in __all__
-"tests/test_backend.py" = ["F403", "F405"]
+# Test files: wildcard imports from common, lambda test helpers, bare excepts, etc.
+"tests/test_*.py" = ["E701", "E722", "E731", "F403", "F405", "F811"]
