--- a/.github/workflows/pretrained_model_test_ci.yml
+++ b/.github/workflows/pretrained_model_test_ci.yml
@@ -15,106 +15,36 @@ concurrency:
 
 jobs:
 
-  Test_min_py_with_min_tf: # Do not change this name because it is used in 'publish-test-results' section below.
-    strategy:
-      fail-fast: false
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-
-      - name: Run Tests (Py310-TF2.13-18)
-        uses: ./.github/actions/pretrained_model_test
-        with:
-          os: 'ubuntu-latest'
-          tf_version: '2.13.0'
-          python_version: '3.10'
-          ort_version: '1.16.3'
-          onnx_version: '1.16.1'
-          opset_version: '18'
-          skip_tflite: 'False'
-
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v6
-        with:
-          name: Test Results (Py310-TF2.13-18-ubuntu)
-          path: junit/test-results.xml
-
-  Test_max_py_with_latest_tf: # Do not change this name because it is used in 'publish-test-results' section below.
-    strategy:
-      fail-fast: false
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-
-      - name: Run Tests (Py310-TF2.15-18)
-        uses: ./.github/actions/pretrained_model_test
-        with:
-          os: 'ubuntu-latest'
-          tf_version: '2.15.0'
-          python_version: '3.10'
-          ort_version: '1.16.3'
-          onnx_version: '1.16.1'
-          opset_version: '18'
-          skip_tflite: 'False'
-
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v6
-        with:
-          name: Test Results (Py310-TF2.15-18-ubuntu)
-          path: junit/test-results.xml
-
-
-  Extra_tests:  # Do not change this name because it is used in 'publish-test-results' section below.
+  test:
     strategy:
       fail-fast: false
       matrix:
-        name:
-          - 'py310-tf2.13'
-          - 'py310-tf2.15'
         os: ['ubuntu-latest', 'windows-2022']
+        tf_version: ['2.13.0', '2.15.0']
         opset_version: ['18', '15']
-        ort_version: ['1.16.3']
-        onnx_version: ['1.16.1']
-        skip_tflite: ['False']
-        include:
-          - name: 'py310-tf2.13'
-            tf_version: '2.13.0'
-            python_version: '3.10'
-          - name: 'py310-tf2.15'
-            tf_version: '2.15.0'
-            python_version: '3.10'
     runs-on: ${{ matrix.os }}
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-
-      - name: Run Tests (Py${{ matrix.python_version }}_TF${{ matrix.tf_version }}_${{ matrix.os }}_${{ matrix.opset_version }}_${{ matrix.ort_version }}_${{ matrix.skip_tflite }})
-        uses: ./.github/actions/pretrained_model_test
+      - uses: actions/checkout@v6
+        with:
+          persist-credentials: false
+      - uses: ./.github/actions/pretrained_model_test
         with:
           tf_version: ${{ matrix.tf_version }}
-          python_version: ${{ matrix.python_version }}
-          ort_version: ${{ matrix.ort_version }}
-          onnx_version: ${{ matrix.onnx_version }}
+          python_version: '3.10'
+          ort_version: '1.16.3'
+          onnx_version: '1.16.1'
           opset_version: ${{ matrix.opset_version }}
-          skip_tflite: ${{ matrix.skip_tflite }}
-
+          skip_tflite: 'False'
       - name: Upload Test Results
         if: always()
         uses: actions/upload-artifact@v6
         with:
-          name: Test Results (Py${{ matrix.python_version }}_TF${{ matrix.tf_version }}_${{ matrix.os }}_${{ matrix.opset_version }}_${{ matrix.ort_version }}_${{ matrix.skip_tflite }})
+          name: Test Results (${{ matrix.os }}-tf${{ matrix.tf_version }}-opset${{ matrix.opset_version }})
           path: junit/test-results.xml
 
   publish-test-results:
     name: "Publish Tests Results to Github"
-    needs: [Test_min_py_with_min_tf, Test_max_py_with_latest_tf, Extra_tests]
+    needs: [test]
     runs-on: ubuntu-latest
     permissions:
       checks: write
@@ -125,7 +55,6 @@ jobs:
         uses: actions/download-artifact@v7
         with:
           path: artifacts
-
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
