--- a/.github/workflows/unit_test_ci.yml
+++ b/.github/workflows/unit_test_ci.yml
@@ -15,54 +15,13 @@ concurrency:
 
 jobs:
 
-  Test_min_py_with_min_tf: # Do not change this name because it is used in Ruleset of this repo.
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
-      - uses: ./.github/actions/unit_test
-        with:
-          tf_version: '2.13.0'
-          python_version: '3.10'
-          ort_version: '1.16.3'
-          onnx_version: '1.16.1'
-          opset_version: '18'
-          skip_tflite: 'False'
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v6
-        with:
-          name: Test Results (min-tf-ubuntu)
-          path: junit/test-results.xml
-
-  Test_max_py_with_latest_tf: # Do not change this name because it is used in Ruleset of this repo.
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
-      - uses: ./.github/actions/unit_test
-        with:
-          tf_version: '2.15.0'
-          python_version: '3.10'
-          ort_version: '1.16.3'
-          onnx_version: '1.16.1'
-          opset_version: '18'
-          skip_tflite: 'False'
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v6
-        with:
-          name: Test Results (max-tf-ubuntu)
-          path: junit/test-results.xml
-
-  Extra_tests:
+  test:
     strategy:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest', 'windows-2022']
+        tf_version: ['2.13.0', '2.15.0']
         opset_version: ['18', '15']
-        exclude:
-          # Already covered by the two required jobs above
-          - os: 'ubuntu-latest'
-            opset_version: '18'
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v6
@@ -70,7 +29,7 @@ jobs:
           persist-credentials: false
       - uses: ./.github/actions/unit_test
         with:
-          tf_version: '2.15.0'
+          tf_version: ${{ matrix.tf_version }}
           python_version: '3.10'
           ort_version: '1.16.3'
           onnx_version: '1.16.1'
@@ -80,12 +39,12 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v6
         with:
-          name: Test Results (${{ matrix.os }}-opset${{ matrix.opset_version }})
+          name: Test Results (${{ matrix.os }}-tf${{ matrix.tf_version }}-opset${{ matrix.opset_version }})
           path: junit/test-results.xml
 
   publish-test-results:
     name: "Publish Tests Results to Github"
-    needs: [Test_min_py_with_min_tf, Test_max_py_with_latest_tf, Extra_tests]
+    needs: [test]
     runs-on: ubuntu-latest
     permissions:
       checks: write
